[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/HighlightIdenticalDigits.gd" type="Script" id=1]
[ext_resource path="res://Scenes/GoToSettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/AdvancedSettings.gd" type="Script" id=3]
[ext_resource path="res://Scenes/SelectedCellPreview.gd" type="Script" id=4]
[ext_resource path="res://Scenes/IdenticalCellPreview.gd" type="Script" id=5]

[node name="AdvancedSettings" type="Panel"]
margin_right = 1080.0
margin_bottom = 1920.0
script = ExtResource( 3 )

[node name="HighlightIdneticalDigits" type="CheckBox" parent="."]
margin_left = 487.0
margin_top = 194.0
margin_right = 893.0
margin_bottom = 421.0
text = "Highlight Identical Digits"
script = ExtResource( 1 )

[node name="GoToSettingsMenu" type="Button" parent="."]
margin_left = 387.0
margin_top = 1663.0
margin_right = 687.0
margin_bottom = 1776.0
text = "Back"
script = ExtResource( 2 )

[node name="HighlightColorPicker" type="ColorPicker" parent="."]
margin_left = 199.0
margin_top = 484.0
margin_right = 521.0
margin_bottom = 946.0

[node name="SelectedCellPreview" type="Panel" parent="."]
margin_left = 568.0
margin_top = 597.0
margin_right = 608.0
margin_bottom = 637.0
script = ExtResource( 4 )

[node name="IdenticalCellPreview" type="Panel" parent="."]
margin_left = 546.0
margin_top = 496.0
margin_right = 586.0
margin_bottom = 536.0
script = ExtResource( 5 )
